--- a/astal/templates/layout.html
+++ b/astal/templates/layout.html
@@ -62,7 +62,7 @@
                                 <a class="navbar-brand" href="{{ url_for('admin.calendar') }}">Dnevnik</a>
                             </li>
                             <li class="nav-item">
-                                <a class="navbar-brand" href="{{ url_for('main.home') }}">Nova rezervacija</a>
+                                <a class="navbar-brand" href="{{ url_for('main.home', language='mn') }}">Nova rezervacija</a>
                             </li>
                             <li class="nav-item">
                                 <a class="navbar-brand" href="{{ url_for('admin.logout') }}">Odjavite se</a>
