--- a/astal/static/css/astal.css
+++ b/astal/static/css/astal.css
@@ -83,3 +83,6 @@ h1.astal-heading { text-align: center; font-size: clamp(2rem, 5vw, 8rem); margin
     51% { -webkit-clip-path: inset(0% 100% 0% 0%); clip-path: inset(0% 100% 0% 0%); }
     100% { -webkit-clip-path: inset(0% 0% 0% 0%); clip-path: inset(0% 0% 0% 0%); }
 }
+
+
+/* dodao Mihas */
