--- a/astal/templates/payment_form.html
+++ b/astal/templates/payment_form.html
@@ -121,9 +121,9 @@
         <input type="hidden" name="Version" value="2.0">
         <input type="hidden" name="TotalAmount" value="{{wspay_data['TotalAmount']}}">
         <input type="hidden" name="Signature" value="{{wspay_data['Signature']}}">
-        <input type="hidden" name="ReturnURL" value="https://www.rozee.pk/blog/wp-content/uploads/2019/05/Quotes-and-their-Meanings-to-Inspire-You-to-Succeed-1068x607.png">
-        <input type="hidden" name="CancelURL" value="https://www.stamplab.com.au/cdn/shop/files/02-1024-cancelled-stamp.png?v=1682978167&width=3508">
-        <input type="hidden" name="ReturnErrorURL" value="https://thumbs.dreamstime.com/b/error-rubber-stamp-word-error-inside-illustration-109026446.jpg">
+        <input type="hidden" name="ReturnURL" value="{{ url_for('main.conformation', language=language, _external=True) }}">
+        <input type="hidden" name="CancelURL" value="{{ url_for('main.cancel_url', language=language, _external=True) }}">
+        <input type="hidden" name="ReturnErrorURL" value="{{ url_for('main.return_error_url', language=language, _external=True) }}">
         <div class="col-md-12 text-center mt-4">
             {% if language == 'mn' %}
             <input class="animated-btn text-white" type="submit" value="Plati">
