--- a/astal/templates/message_html_conformation_mail.html
+++ b/astal/templates/message_html_conformation_mail.html
@@ -78,9 +78,9 @@
             <li><strong>Note:</strong> {{ reservation.note }}</li>
         </ul>
 
-        {% if reservation.amount > 0 %}
+        <!-- {% if reservation.amount > 0 %}
         <p>Your bill at the restaurant will be reduced by the amount paid for the reservation confirmation of <strong>{{ reservation.amount }} €</strong>.</p>
-        {% endif %}
+        {% endif %} -->
 
         <p>Our location is <a href="https://maps.app.goo.gl/UfsBkDsrFFNgAtdk8">here</a>.</p>
         <p>In case of any last minute changes or specific requests, please contact us on WhatsApp +382 68 333 444</p>
@@ -102,9 +102,9 @@
             <li><strong>Napomena:</strong> {{ reservation.note }}</li>
         </ul>
 
-        {% if reservation.amount > 0 %}
+        <!-- {% if reservation.amount > 0 %}
         <p>Vaš račun u restoranu biće umanjen za plaćeni iznos za potvrdu rezervacije od <strong>{{ reservation.amount }} €</strong>.</p>
-        {% endif %}
+        {% endif %} -->
 
         <p>Naša lokacija je <a href="https://maps.app.goo.gl/UfsBkDsrFFNgAtdk8">ovdje</a>.</p>
         <p>U slučaju izmjena u posljednjem trenutku ili bilo kakvih specifičnih zahtjeva, molim Vas da nas kontaktirate putem telefona +382 68 333 444.</p>
