--- a/astal/templates/login.html
+++ b/astal/templates/login.html
@@ -1,36 +1,32 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h1 class="astal-heading">PRIJAVLJIVANJE</h1>
+<h1 class="astal-heading text-center">PRIJAVLJIVANJE</h1>
 <form method="POST" action="{{ url_for('admin.admin_login') }}">
     {{ form.hidden_tag() }}
-    <div class="container astal-form">
-        <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-3">
-                {{ form.email.label(class="form-label cormorant") }}
-                {{ form.email(class="form-control") }}
-                {% for error in form.email.errors %}
-                    <span class="text-danger">{{ error }}</span>
-                {% endfor %}
-            </div>
-            <div class="col-md-3">
-                {{ form.password.label(class="form-label cormorant") }}
-                {{ form.password(class="form-control") }}
-                {% for error in form.password.errors %}
-                    <span class="text-danger">{{ error }}</span>
-                {% endfor %}
-            </div>
-            <div class="col-md-3"></div>
+    <div class="container astal-form" style="max-width: 400px; margin: 0 auto;">
+        <div class="mb-4">
+            {{ form.email.label(class="form-label cormorant") }}
+            {{ form.email(class="form-control") }}
+            {% for error in form.email.errors %}
+                <span class="text-danger">{{ error }}</span>
+            {% endfor %}
         </div>
-        <div class="row">
-            <div class="col-md-4 text-end mt-4">
+        <div class="mb-4">
+            {{ form.password.label(class="form-label cormorant") }}
+            {{ form.password(class="form-control") }}
+            {% for error in form.password.errors %}
+                <span class="text-danger">{{ error }}</span>
+            {% endfor %}
+        </div>
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <div>
                 {{ form.remember(class="form-check-input") }}
                 {{ form.remember.label(class="form-check-label") }}
             </div>
-            <div class="col-md-4 text-center mt-4">
-                <button type="submit" class="animated-btn text-white">{{ form.submit.label }}</button>
-            </div>
-            <div class="col-md-4 text-center mt-4"></div>
+            <button type="submit" class="animated-btn text-white">{{ form.submit.label }}</button>
+        </div>
+        <div class="text-center mt-2">
+            <a href="{{ url_for('admin.reset_password_request') }}" class="text-decoration-none">Zaboravljena lozinka?</a>
         </div>
     </div>
 </form>
